[gd_scene load_steps=16 format=3 uid="uid://df45ndsctidqu"]

[ext_resource type="Script" path="res://legacy/old_main.gd" id="1_4j0sw"]
[ext_resource type="PackedScene" uid="uid://dpa4t0rj1qhrx" path="res://robot/RobotModel.blend" id="1_fg1qv"]
[ext_resource type="PackedScene" uid="uid://cybt47ccqb63u" path="res://game_map/game_map.tscn" id="2_0rr3i"]
[ext_resource type="Script" path="res://legacy/old_robot.gd" id="2_v3pdo"]
[ext_resource type="Script" path="res://legacy/old_camera.gd" id="4_5ecoh"]
[ext_resource type="Script" path="res://legacy/old_gui.gd" id="5_uu8tf"]
[ext_resource type="ButtonGroup" uid="uid://d3yfh6q3lw6sx" path="res://gameplay/cam_button_group.tres" id="7_mlo4m"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_27sea"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_imdmj"]
sky_material = SubResource("ProceduralSkyMaterial_27sea")

[sub_resource type="Environment" id="Environment_odbej"]
background_mode = 2
sky = SubResource("Sky_imdmj")
ssao_enabled = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6my6l"]
height = 1.0
radius = 0.25

[sub_resource type="SphereShape3D" id="SphereShape3D_qc2ko"]
radius = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_cgfw5"]
radius = 0.2

[sub_resource type="SystemFont" id="SystemFont_kodgb"]
font_names = PackedStringArray("Consolas", "Monospace")

[sub_resource type="CodeHighlighter" id="CodeHighlighter_wj31c"]
number_color = Color(0.643137, 1, 0.898039, 1)
symbol_color = Color(0.698039, 0.819608, 1, 1)

[node name="Gameplay" type="Node3D"]
script = ExtResource("1_4j0sw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.250002, 0.433016, 0, 0.866025, 0.5, -0.500003, 0.433012, -0.749998, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_odbej")

[node name="Robot" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0)
floor_stop_on_slope = false
script = ExtResource("2_v3pdo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Robot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_6my6l")

[node name="Eyes" type="Area3D" parent="Robot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, -1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Robot/Eyes"]
shape = SubResource("SphereShape3D_qc2ko")

[node name="EyesBack" type="Area3D" parent="Robot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Robot/EyesBack"]
shape = SubResource("SphereShape3D_cgfw5")

[node name="RobotModel" parent="Robot" instance=ExtResource("1_fg1qv")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="GameMap" parent="." instance=ExtResource("2_0rr3i")]

[node name="Camera3D" type="Camera3D" parent="."]
script = ExtResource("4_5ecoh")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_uu8tf")

[node name="Run" type="Button" parent="GUI"]
layout_mode = 0
anchor_left = 0.6
anchor_top = 0.02
anchor_right = 0.72
anchor_bottom = 0.08
text = "Run"

[node name="Step" type="Button" parent="GUI"]
layout_mode = 0
anchor_left = 0.74
anchor_top = 0.02
anchor_right = 0.86
anchor_bottom = 0.08
text = "Step"

[node name="Reset" type="Button" parent="GUI"]
layout_mode = 0
anchor_left = 0.88
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.08
text = "Reset"

[node name="Program" type="CodeEdit" parent="GUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.1
anchor_right = 0.97
anchor_bottom = 0.95
offset_right = 8.0
offset_bottom = 8.0
theme_override_fonts/font = SubResource("SystemFont_kodgb")
theme_override_font_sizes/font_size = 18
highlight_current_line = true
draw_tabs = true
draw_spaces = true
syntax_highlighter = SubResource("CodeHighlighter_wj31c")
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true
indent_size = 2

[node name="ErrorRect" type="ColorRect" parent="GUI"]
visible = false
layout_mode = 0
anchor_left = 0.02
anchor_top = 0.9
anchor_right = 0.58
anchor_bottom = 0.96
color = Color(0.831373, 0.0784314, 0.0823529, 1)

[node name="ErrorLabel" type="Label" parent="GUI/ErrorRect"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "No Errors Yet"

[node name="CamMenu" type="Button" parent="GUI"]
layout_mode = 0
anchor_left = 0.46
anchor_top = 0.02
anchor_right = 0.58
anchor_bottom = 0.08
toggle_mode = true
text = "Camera3D"

[node name="Options" type="VBoxContainer" parent="GUI/CamMenu"]
visible = false
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 2.0

[node name="FixedCam" type="CheckBox" parent="GUI/CamMenu/Options"]
layout_mode = 2
button_pressed = true
button_group = ExtResource("7_mlo4m")
text = "Map Center"

[node name="TopDown" type="CheckBox" parent="GUI/CamMenu/Options"]
layout_mode = 2
button_group = ExtResource("7_mlo4m")
text = "Top Down"

[node name="TopDownRotate" type="CheckBox" parent="GUI/CamMenu/Options"]
layout_mode = 2
button_group = ExtResource("7_mlo4m")
text = "Top Rotating"

[node name="FirstPerson" type="CheckBox" parent="GUI/CamMenu/Options"]
layout_mode = 2
button_group = ExtResource("7_mlo4m")
text = "First Person"

[node name="ThirdPerson" type="CheckBox" parent="GUI/CamMenu/Options"]
layout_mode = 2
button_group = ExtResource("7_mlo4m")
text = "Third Person"

[node name="ShoulderSurfR" type="CheckBox" parent="GUI/CamMenu/Options"]
layout_mode = 2
button_group = ExtResource("7_mlo4m")
text = "Right Shoulder"

[node name="ShoulderSurfL" type="CheckBox" parent="GUI/CamMenu/Options"]
layout_mode = 2
button_group = ExtResource("7_mlo4m")
text = "Left Shoulder"

[node name="RegisterScroll" type="ScrollContainer" parent="GUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.1
anchor_bottom = 1.0
offset_right = 8.0
grow_vertical = 2

[node name="Registers" type="VBoxContainer" parent="GUI/RegisterScroll"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ContainerReg0" type="VBoxContainer" parent="GUI/RegisterScroll/Registers"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/RegisterScroll/Registers/ContainerReg0"]
layout_mode = 2
text = "reg0"

[node name="Value" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerReg0"]
layout_mode = 2
text = "0"
editable = false

[node name="BinValue" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerReg0"]
layout_mode = 2
text = "00000000"
editable = false

[node name="ContainerReg1" type="VBoxContainer" parent="GUI/RegisterScroll/Registers"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/RegisterScroll/Registers/ContainerReg1"]
layout_mode = 2
text = "reg1"

[node name="Value" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerReg1"]
layout_mode = 2
text = "0"
editable = false

[node name="BinValue" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerReg1"]
layout_mode = 2
text = "00000000"
editable = false

[node name="ContainerReg2" type="VBoxContainer" parent="GUI/RegisterScroll/Registers"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/RegisterScroll/Registers/ContainerReg2"]
layout_mode = 2
text = "reg2"

[node name="Value" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerReg2"]
layout_mode = 2
text = "0"
editable = false

[node name="BinValue" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerReg2"]
layout_mode = 2
text = "00000000"
editable = false

[node name="ContainerReg3" type="VBoxContainer" parent="GUI/RegisterScroll/Registers"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/RegisterScroll/Registers/ContainerReg3"]
layout_mode = 2
text = "reg3"

[node name="Value" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerReg3"]
layout_mode = 2
text = "0"
editable = false

[node name="BinValue" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerReg3"]
layout_mode = 2
text = "00000000"
editable = false

[node name="ContainerReg4" type="VBoxContainer" parent="GUI/RegisterScroll/Registers"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/RegisterScroll/Registers/ContainerReg4"]
layout_mode = 2
text = "reg4"

[node name="Value" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerReg4"]
layout_mode = 2
text = "0"
editable = false

[node name="BinValue" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerReg4"]
layout_mode = 2
text = "00000000"
editable = false

[node name="ContainerReg5" type="VBoxContainer" parent="GUI/RegisterScroll/Registers"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/RegisterScroll/Registers/ContainerReg5"]
layout_mode = 2
text = "reg5"

[node name="Value" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerReg5"]
layout_mode = 2
text = "0"
editable = false

[node name="BinValue" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerReg5"]
layout_mode = 2
text = "00000000"
editable = false

[node name="ContainerRegBot" type="VBoxContainer" parent="GUI/RegisterScroll/Registers"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/RegisterScroll/Registers/ContainerRegBot"]
layout_mode = 2
text = "rob"

[node name="Value" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerRegBot"]
layout_mode = 2
text = "0"
editable = false

[node name="BinValue" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerRegBot"]
layout_mode = 2
text = "00000000"
editable = false

[node name="ContainerRegBotEyes" type="VBoxContainer" parent="GUI/RegisterScroll/Registers"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/RegisterScroll/Registers/ContainerRegBotEyes"]
layout_mode = 2
text = "eye"

[node name="Value" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerRegBotEyes"]
layout_mode = 2
text = "0"
editable = false

[node name="BinValue" type="LineEdit" parent="GUI/RegisterScroll/Registers/ContainerRegBotEyes"]
layout_mode = 2
text = "none"
editable = false

[node name="SpeedBox" type="SpinBox" parent="GUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_right = 0.2
anchor_bottom = 0.06
min_value = 0.1
max_value = 6.0
step = 0.1
value = 1.0

[node name="BackButton" type="Button" parent="GUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.92
anchor_right = 0.2
anchor_bottom = 0.98
text = "Back"

[node name="InfoButton" type="Button" parent="GUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.39
anchor_top = 0.02
anchor_right = 0.45
anchor_bottom = 0.08
text = "Help"

[node name="InfoTabs" type="TabContainer" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.1
anchor_right = 0.59
anchor_bottom = 0.9

[node name="Instructions" type="RichTextLabel" parent="GUI/InfoTabs"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[color=lime]Note: instructions are case insensitive[/color]

    [color=hotpink]mov[/color] [color=skyblue]from:int/reg[/color] [color=goldenrod]to:reg[/color]
[color=khaki]copies[/color] the [color=skyblue]from[/color] number, or the number in the [color=skyblue]from[/color] register onto the [color=goldenrod]to[/color] register


    [color=hotpink]jmp[/color] [color=lightgreen]destination:int/reg[/color]
inconditional jump, sends execution to the line in the [color=lightgreen]destination[/color]

    [color=hotpink]jez[/color] [color=skyblue]condition:int/reg[/color] [color=lightgreen]destination:int/reg[/color]
sends execution to the [color=lightgreen]destination[/color] if the [color=skyblue]condition[/color] number is zero

    [color=hotpink]jnz[/color] [color=skyblue]condition:int/reg[/color] [color=lightgreen]destination:int/reg[/color]
sends execution to the [color=lightgreen]destination[/color] if the [color=skyblue]condition[/color] number is [color=indianred]NOT[/color] zero

    [color=hotpink]jeq[/color] [color=skyblue]conditionA:int/reg[/color] [color=powderblue]conditionB:int/reg[/color] [color=lightgreen]destination:int/reg[/color]
sends execution to the [color=lightgreen]destination[/color] if [color=skyblue]both[/color] [color=powderblue]condition[/color] numbers [color=khaki]are equal[/color]

    [color=hotpink]jne[/color] [color=skyblue]conditionA:int/reg[/color] [color=powderblue]conditionB:int/reg[/color] [color=lightgreen]destination:int/reg[/color]
sends execution to the [color=lightgreen]destination[/color] if [color=skyblue]both[/color] [color=powderblue]condition[/color] numbers [color=khaki]are different[/color]

    [color=hotpink]jgt[/color] [color=skyblue]conditionA:int/reg[/color] [color=powderblue]conditionB:int/reg[/color] [color=lightgreen]destination:int/reg[/color]
sends execution to the [color=lightgreen]destination[/color] if the [color=skyblue]first[/color] condition number [color=khaki]is greater than[/color] the [color=powderblue]second[/color]

    [color=hotpink]jlt[/color] [color=skyblue]conditionA:int/reg[/color] [color=powderblue]conditionB:int/reg[/color] [color=lightgreen]destination:int/reg[/color]
sends execution to the [color=lightgreen]destination[/color] if the [color=skyblue]first[/color] condition number [color=khaki]is lesser than[/color] the [color=powderblue]second[/color]

    [color=hotpink]jge[/color] [color=skyblue]conditionA:int/reg[/color] [color=powderblue]conditionB:int/reg[/color] [color=lightgreen]destination:int/reg[/color]
sends execution to the [color=lightgreen]destination[/color] if the [color=skyblue]first[/color] condition number [color=khaki]is greater than or equal to[/color] the [color=powderblue]second[/color]

    [color=hotpink]jle[/color] [color=skyblue]conditionA:int/reg[/color] [color=powderblue]conditionB:int/reg[/color] [color=lightgreen]destination:int/reg[/color]
sends execution to the [color=lightgreen]destination[/color] if the [color=skyblue]first[/color] condition number [color=khaki]is lesser than or equal to[/color] the [color=powderblue]second[/color]


    [color=hotpink]add[/color] [color=skyblue]numA:int/reg[/color] [color=powderblue]numB:int/reg[/color] [color=goldenrod]out:reg[/color]
[color=khaki]adds[/color] together the numbers in [color=skyblue]the[/color] [color=powderblue]inputs[/color] and places the result in the [color=goldenrod]output[/color] register

    [color=hotpink]sub[/color] [color=skyblue]numA:int/reg[/color] [color=powderblue]numB:int/reg[/color] [color=goldenrod]out:reg[/color]
[color=khaki]substracts[/color] the [color=powderblue]second input[/color] from the [color=skyblue]first[/color] and places the result in the [color=goldenrod]output[/color] register

    [color=hotpink]mul[/color] [color=skyblue]numA:int/reg[/color] [color=powderblue]numB:int/reg[/color] [color=goldenrod]out:reg[/color]
[color=khaki]multiplies[/color] together the numbers in [color=skyblue]the[/color] [color=powderblue]inputs[/color] and places the result in the out register

    [color=hotpink]div[/color] [color=skyblue]numA:int/reg[/color] [color=powderblue]numB:int/reg[/color] [color=goldenrod]out:reg[/color]
[color=khaki]divides[/color] the [color=skyblue]first input[/color] by the [color=powderblue]second[/color] and places the result in the [color=goldenrod]output[/color] register result is rounded down

    [color=hotpink]mod[/color] [color=skyblue]numA:int/reg[/color] [color=powderblue]numB:int/reg[/color] [color=goldenrod]out:reg[/color]
places the [color=khaki]remainder[/color] of the division of the [color=skyblue]first[/color] number by the [color=powderblue]second[/color] number and places it in the [color=goldenrod]output[/color] register


    [color=hotpink]shr[/color] [color=skyblue]in:int/reg[/color] [color=goldenrod]out:reg[/color]
[color=khaki]shifts the bits[/color] of the number in the [color=skyblue]input[/color] [color=khaki]one position to the right[/color] and places that in the [color=goldenrod]output[/color] register

    [color=hotpink]shl[/color] [color=skyblue]in:int/reg[/color] [color=goldenrod]out:reg[/color]
[color=khaki]shifts the bits[/color] of the number in the [color=skyblue]input[/color] [color=khaki]one position to the left[/color] and places the result in the [color=goldenrod]output[/color] register

    [color=hotpink]and[/color] [color=skyblue]inA:int/reg[/color] [color=powderblue]inB:int/reg[/color] [color=goldenrod]out:reg[/color]
[color=khaki]ands the bits[/color] of the [color=skyblue]two[/color] [color=powderblue]inputs[/color] together and places the result in the [color=goldenrod]output[/color] register

    [color=hotpink]or[/color]  [color=skyblue]inA:int/reg[/color] [color=powderblue]inB:int/reg[/color] [color=goldenrod]out:reg[/color]
[color=khaki]ors the bits[/color] of the [color=skyblue]two[/color] [color=powderblue]inputs[/color] together and places the result in the [color=goldenrod]output[/color] register

    [color=hotpink]xor[/color] [color=skyblue]inA:int/reg[/color] [color=powderblue]inB:int/reg[/color] [color=goldenrod]out:reg[/color]
[color=khaki]xors the bits[/color] of the [color=skyblue]two[/color] [color=powderblue]inputs[/color] together and places the result in the [color=goldenrod]output[/color] register

    [color=hotpink]not[/color] [color=skyblue]in:int/reg[/color] [color=goldenrod]out:reg[/color]
[color=khaki]filps all the bits[/color] in the [color=skyblue]input[/color] register and places that number in the [color=goldenrod]output[/color] register"
autowrap_mode = 2

[node name="Registers" type="RichTextLabel" parent="GUI/InfoTabs"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
bbcode_enabled = true
text = "[color=lime]Note: register names are case insensitive[/color]

[color=lightgreen]Registers[/color] are places to store data, the robot has 8 registers, 6 general purpose ([color=lightgreen]reg0[/color]-[color=lightgreen]reg5[/color]) and two functional ([color=lightgreen]rob[/color], [color=lightgreen]eye[/color])

[color=lightgreen]Registers[/color] can hold [color=khaki]8-bit unsigned integers[/color], and they will [color=salmon]wrap around accordingly[/color]
    [color=gray](for example [/color][color=skyblue]255[/color][color=gray]+[/color][color=skyblue]1[/color][color=gray] will wrap around to [/color][color=skyblue]0[/color][color=gray], equally, [/color][color=skyblue]0[/color][color=gray]-[/color][color=skyblue]1[/color][color=gray] will be turned to [/color][color=skyblue]255[/color][color=gray])[/color]

the rob register, when a value other than [color=skyblue]0[/color] is [color=lightgreen]written[/color] to it, will make the robot [color=khaki]execute the action assigned[/color]
    [color=skyblue]0[/color] - Nothing
    [color=skyblue]1[/color] - Step forward
    [color=skyblue]2[/color] - Step back
    [color=skyblue]3[/color] - Turn right
    [color=skyblue]4[/color] - Turn left
    [color=skyblue]5[/color] - Turn around
    [color=skyblue]6[/color] - Wave hi
[color=skyblue]all other values[/color] written to the [color=lightgreen]register[/color] [color=salmon]will be ignored[/color], the register is flushed with every robot action

the [color=lightgreen]eye register[/color] will hold a value denoting what the robot has [color=khaki]immediately in front of it[/color]
    [color=skyblue]0[/color] - Nothing
    [color=skyblue]1[/color] - Wall
values can be written to the register, but they will [color=salmon]do nothing[/color], the register is updated with every robot action"
autowrap_mode = 2

[node name="Close" type="Control" parent="GUI/InfoTabs"]
visible = false
layout_mode = 2

[connection signal="robotFinished" from="Robot" to="." method="_on_Robot_robotFinished"]
[connection signal="pressed" from="GUI/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="GUI/Step" to="." method="_on_Step_pressed"]
[connection signal="pressed" from="GUI/Reset" to="." method="_on_Reset_pressed"]
[connection signal="toggled" from="GUI/CamMenu" to="GUI" method="_on_CamMenu_toggled"]
[connection signal="pressed" from="GUI/CamMenu/Options/FixedCam" to="Camera3D" method="_on_FixedCam_pressed"]
[connection signal="pressed" from="GUI/CamMenu/Options/TopDown" to="Camera3D" method="_on_TopDown_pressed"]
[connection signal="pressed" from="GUI/CamMenu/Options/TopDownRotate" to="Camera3D" method="_on_TopDownRotate_pressed"]
[connection signal="pressed" from="GUI/CamMenu/Options/FirstPerson" to="Camera3D" method="_on_FirstPerson_pressed"]
[connection signal="pressed" from="GUI/CamMenu/Options/ThirdPerson" to="Camera3D" method="_on_ThirdPerson_pressed"]
[connection signal="pressed" from="GUI/CamMenu/Options/ShoulderSurfR" to="Camera3D" method="_on_ShoulderSurfR_pressed"]
[connection signal="pressed" from="GUI/CamMenu/Options/ShoulderSurfL" to="Camera3D" method="_on_ShoulderSurfL_pressed"]
[connection signal="value_changed" from="GUI/SpeedBox" to="Robot" method="set_speed"]
[connection signal="pressed" from="GUI/BackButton" to="GUI" method="_on_back_button_pressed"]
[connection signal="pressed" from="GUI/InfoButton" to="GUI" method="_on_info_button_pressed"]
[connection signal="tab_clicked" from="GUI/InfoTabs" to="GUI" method="_on_info_tabs_tab_clicked"]
